src/main/java/com/uji/antlr_output/ujiFileParser.java
// Generated from ujiFile.g4 by ANTLR 4.13.2
package com.uji.antlr_output;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class ujiFileParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, INT=9, 
		RAW_STRING=10, FMT_STRING=11, FLOAT=12, EOL=13, ID=14, WS=15, COMMENT=16;
	public static final int
		RULE_ujiFile = 0, RULE_ujiMulBinding = 1, RULE_ujiOneBinding = 2, RULE_ujiMulRvalue = 3, 
		RULE_ujiOneRvalue = 4, RULE_ujiPrimary = 5, RULE_ujiMulDef = 6, RULE_ujiShortMulDef = 7, 
		RULE_ujiOneDef = 8, RULE_ujiDefParams = 9, RULE_ujiMulCopy = 10, RULE_ujiOneCopy = 11, 
		RULE_ujiLiteral = 12, RULE_indent = 13, RULE_unindent = 14, RULE_eols = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"ujiFile", "ujiMulBinding", "ujiOneBinding", "ujiMulRvalue", "ujiOneRvalue", 
			"ujiPrimary", "ujiMulDef", "ujiShortMulDef", "ujiOneDef", "ujiDefParams", 
			"ujiMulCopy", "ujiOneCopy", "ujiLiteral", "indent", "unindent", "eols"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", "'<'", "'>'", "'.'", "'...'", "'/'", "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, "INT", "RAW_STRING", 
			"FMT_STRING", "FLOAT", "EOL", "ID", "WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ujiFile.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ujiFileParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UjiFileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ujiFileParser.EOF, 0); }
		public List<UjiMulBindingContext> ujiMulBinding() {
			return getRuleContexts(UjiMulBindingContext.class);
		}
		public UjiMulBindingContext ujiMulBinding(int i) {
			return getRuleContext(UjiMulBindingContext.class,i);
		}
		public List<EolsContext> eols() {
			return getRuleContexts(EolsContext.class);
		}
		public EolsContext eols(int i) {
			return getRuleContext(EolsContext.class,i);
		}
		public UjiFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ujiFile; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ujiFileVisitor ) return ((ujiFileVisitor<? extends T>)visitor).visitUjiFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UjiFileContext ujiFile() throws RecognitionException {
		UjiFileContext _localctx = new UjiFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_ujiFile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==EOL || _la==ID) {
				{
				{
				setState(33);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==EOL) {
					{
					setState(32);
					eols();
					}
				}

				setState(35);
				ujiMulBinding();
				setState(37);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(36);
					eols();
					}
					break;
				}
				}
				}
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(44);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UjiMulBindingContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ujiFileParser.ID, 0); }
		public UjiMulRvalueContext ujiMulRvalue() {
			return getRuleContext(UjiMulRvalueContext.class,0);
		}
		public UjiMulBindingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ujiMulBinding; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ujiFileVisitor ) return ((ujiFileVisitor<? extends T>)visitor).visitUjiMulBinding(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UjiMulBindingContext ujiMulBinding() throws RecognitionException {
		UjiMulBindingContext _localctx = new UjiMulBindingContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_ujiMulBinding);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(ID);
			setState(47);
			match(T__0);
			setState(48);
			ujiMulRvalue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UjiOneBindingContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ujiFileParser.ID, 0); }
		public UjiOneRvalueContext ujiOneRvalue() {
			return getRuleContext(UjiOneRvalueContext.class,0);
		}
		public UjiOneBindingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ujiOneBinding; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ujiFileVisitor ) return ((ujiFileVisitor<? extends T>)visitor).visitUjiOneBinding(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UjiOneBindingContext ujiOneBinding() throws RecognitionException {
		UjiOneBindingContext _localctx = new UjiOneBindingContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_ujiOneBinding);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(ID);
			setState(51);
			match(T__0);
			setState(52);
			ujiOneRvalue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UjiMulRvalueContext extends ParserRuleContext {
		public UjiMulDefContext ujiMulDef() {
			return getRuleContext(UjiMulDefContext.class,0);
		}
		public UjiMulCopyContext ujiMulCopy() {
			return getRuleContext(UjiMulCopyContext.class,0);
		}
		public UjiMulBindingContext ujiMulBinding() {
			return getRuleContext(UjiMulBindingContext.class,0);
		}
		public UjiOneRvalueContext ujiOneRvalue() {
			return getRuleContext(UjiOneRvalueContext.class,0);
		}
		public UjiMulRvalueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ujiMulRvalue; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ujiFileVisitor ) return ((ujiFileVisitor<? extends T>)visitor).visitUjiMulRvalue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UjiMulRvalueContext ujiMulRvalue() throws RecognitionException {
		UjiMulRvalueContext _localctx = new UjiMulRvalueContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ujiMulRvalue);
		try {
			setState(58);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(54);
				ujiMulDef();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(55);
				ujiMulCopy();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(56);
				ujiMulBinding();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(57);
				ujiOneRvalue();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UjiOneRvalueContext extends ParserRuleContext {
		public UjiOneDefContext ujiOneDef() {
			return getRuleContext(UjiOneDefContext.class,0);
		}
		public UjiOneCopyContext ujiOneCopy() {
			return getRuleContext(UjiOneCopyContext.class,0);
		}
		public UjiOneBindingContext ujiOneBinding() {
			return getRuleContext(UjiOneBindingContext.class,0);
		}
		public UjiOneRvalueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ujiOneRvalue; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ujiFileVisitor ) return ((ujiFileVisitor<? extends T>)visitor).visitUjiOneRvalue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UjiOneRvalueContext ujiOneRvalue() throws RecognitionException {
		UjiOneRvalueContext _localctx = new UjiOneRvalueContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ujiOneRvalue);
		try {
			setState(63);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(60);
				ujiOneDef();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(61);
				ujiOneCopy();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(62);
				ujiOneBinding();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UjiPrimaryContext extends ParserRuleContext {
		public UjiLiteralContext ujiLiteral() {
			return getRuleContext(UjiLiteralContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(ujiFileParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ujiFileParser.ID, i);
		}
		public UjiOneRvalueContext ujiOneRvalue() {
			return getRuleContext(UjiOneRvalueContext.class,0);
		}
		public UjiPrimaryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ujiPrimary; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ujiFileVisitor ) return ((ujiFileVisitor<? extends T>)visitor).visitUjiPrimary(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UjiPrimaryContext ujiPrimary() throws RecognitionException {
		UjiPrimaryContext _localctx = new UjiPrimaryContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ujiPrimary);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(65);
				match(ID);
				setState(66);
				match(T__0);
				}
				break;
			}
			setState(75);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				{
				{
				setState(69);
				match(T__1);
				setState(70);
				ujiOneRvalue();
				setState(71);
				match(T__2);
				}
				}
				break;
			case INT:
			case RAW_STRING:
			case FMT_STRING:
			case FLOAT:
				{
				setState(73);
				ujiLiteral();
				}
				break;
			case ID:
				{
				setState(74);
				match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(77);
				match(T__3);
				setState(78);
				match(ID);
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(84);
				match(T__4);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UjiMulDefContext extends ParserRuleContext {
		public UjiDefParamsContext ujiDefParams() {
			return getRuleContext(UjiDefParamsContext.class,0);
		}
		public IndentContext indent() {
			return getRuleContext(IndentContext.class,0);
		}
		public UjiMulRvalueContext ujiMulRvalue() {
			return getRuleContext(UjiMulRvalueContext.class,0);
		}
		public UnindentContext unindent() {
			return getRuleContext(UnindentContext.class,0);
		}
		public List<EolsContext> eols() {
			return getRuleContexts(EolsContext.class);
		}
		public EolsContext eols(int i) {
			return getRuleContext(EolsContext.class,i);
		}
		public List<UjiMulBindingContext> ujiMulBinding() {
			return getRuleContexts(UjiMulBindingContext.class);
		}
		public UjiMulBindingContext ujiMulBinding(int i) {
			return getRuleContext(UjiMulBindingContext.class,i);
		}
		public UjiShortMulDefContext ujiShortMulDef() {
			return getRuleContext(UjiShortMulDefContext.class,0);
		}
		public UjiMulDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ujiMulDef; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ujiFileVisitor ) return ((ujiFileVisitor<? extends T>)visitor).visitUjiMulDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UjiMulDefContext ujiMulDef() throws RecognitionException {
		UjiMulDefContext _localctx = new UjiMulDefContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ujiMulDef);
		try {
			int _alt;
			setState(102);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				match(T__5);
				setState(88);
				ujiDefParams();
				setState(89);
				indent();
				setState(90);
				ujiMulRvalue();
				setState(96);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(91);
						eols();
						setState(92);
						ujiMulBinding();
						}
						} 
					}
					setState(98);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				}
				setState(99);
				unindent();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				ujiShortMulDef();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UjiShortMulDefContext extends ParserRuleContext {
		public UjiDefParamsContext ujiDefParams() {
			return getRuleContext(UjiDefParamsContext.class,0);
		}
		public UjiMulRvalueContext ujiMulRvalue() {
			return getRuleContext(UjiMulRvalueContext.class,0);
		}
		public UjiOneDefContext ujiOneDef() {
			return getRuleContext(UjiOneDefContext.class,0);
		}
		public UjiShortMulDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ujiShortMulDef; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ujiFileVisitor ) return ((ujiFileVisitor<? extends T>)visitor).visitUjiShortMulDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UjiShortMulDefContext ujiShortMulDef() throws RecognitionException {
		UjiShortMulDefContext _localctx = new UjiShortMulDefContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ujiShortMulDef);
		try {
			setState(110);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(104);
				match(T__5);
				setState(105);
				ujiDefParams();
				setState(106);
				match(T__5);
				setState(107);
				ujiMulRvalue();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(109);
				ujiOneDef();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UjiOneDefContext extends ParserRuleContext {
		public UjiDefParamsContext ujiDefParams() {
			return getRuleContext(UjiDefParamsContext.class,0);
		}
		public UjiOneRvalueContext ujiOneRvalue() {
			return getRuleContext(UjiOneRvalueContext.class,0);
		}
		public UjiOneDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ujiOneDef; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ujiFileVisitor ) return ((ujiFileVisitor<? extends T>)visitor).visitUjiOneDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UjiOneDefContext ujiOneDef() throws RecognitionException {
		UjiOneDefContext _localctx = new UjiOneDefContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ujiOneDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(T__5);
			setState(113);
			ujiDefParams();
			setState(114);
			match(T__5);
			setState(115);
			ujiOneRvalue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UjiDefParamsContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(ujiFileParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ujiFileParser.ID, i);
		}
		public List<UjiPrimaryContext> ujiPrimary() {
			return getRuleContexts(UjiPrimaryContext.class);
		}
		public UjiPrimaryContext ujiPrimary(int i) {
			return getRuleContext(UjiPrimaryContext.class,i);
		}
		public UjiDefParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ujiDefParams; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ujiFileVisitor ) return ((ujiFileVisitor<? extends T>)visitor).visitUjiDefParams(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UjiDefParamsContext ujiDefParams() throws RecognitionException {
		UjiDefParamsContext _localctx = new UjiDefParamsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_ujiDefParams);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(117);
					match(ID);
					}
					} 
				}
				setState(122);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			}
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(123);
				match(T__4);
				setState(124);
				match(ID);
				}
			}

			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(127);
				match(ID);
				setState(128);
				match(T__0);
				setState(129);
				ujiPrimary();
				}
				}
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UjiMulCopyContext extends ParserRuleContext {
		public UjiMulCopyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ujiMulCopy; }
	 
		public UjiMulCopyContext() { }
		public void copyFrom(UjiMulCopyContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class UjiMulCopyOneOptionContext extends UjiMulCopyContext {
		public UjiOneCopyContext ujiOneCopy() {
			return getRuleContext(UjiOneCopyContext.class,0);
		}
		public UjiMulCopyOneOptionContext(UjiMulCopyContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ujiFileVisitor ) return ((ujiFileVisitor<? extends T>)visitor).visitUjiMulCopyOneOption(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class UjiMulCopyMulOptionContext extends UjiMulCopyContext {
		public UjiPrimaryContext ujiPrimary() {
			return getRuleContext(UjiPrimaryContext.class,0);
		}
		public IndentContext indent() {
			return getRuleContext(IndentContext.class,0);
		}
		public List<UjiMulRvalueContext> ujiMulRvalue() {
			return getRuleContexts(UjiMulRvalueContext.class);
		}
		public UjiMulRvalueContext ujiMulRvalue(int i) {
			return getRuleContext(UjiMulRvalueContext.class,i);
		}
		public UnindentContext unindent() {
			return getRuleContext(UnindentContext.class,0);
		}
		public List<EolsContext> eols() {
			return getRuleContexts(EolsContext.class);
		}
		public EolsContext eols(int i) {
			return getRuleContext(EolsContext.class,i);
		}
		public UjiMulCopyMulOptionContext(UjiMulCopyContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ujiFileVisitor ) return ((ujiFileVisitor<? extends T>)visitor).visitUjiMulCopyMulOption(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UjiMulCopyContext ujiMulCopy() throws RecognitionException {
		UjiMulCopyContext _localctx = new UjiMulCopyContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_ujiMulCopy);
		try {
			int _alt;
			setState(149);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				_localctx = new UjiMulCopyMulOptionContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(135);
				ujiPrimary();
				setState(136);
				indent();
				setState(137);
				ujiMulRvalue();
				setState(143);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(138);
						eols();
						setState(139);
						ujiMulRvalue();
						}
						} 
					}
					setState(145);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
				}
				setState(146);
				unindent();
				}
				break;
			case 2:
				_localctx = new UjiMulCopyOneOptionContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(148);
				ujiOneCopy();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UjiOneCopyContext extends ParserRuleContext {
		public List<UjiPrimaryContext> ujiPrimary() {
			return getRuleContexts(UjiPrimaryContext.class);
		}
		public UjiPrimaryContext ujiPrimary(int i) {
			return getRuleContext(UjiPrimaryContext.class,i);
		}
		public UjiOneCopyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ujiOneCopy; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ujiFileVisitor ) return ((ujiFileVisitor<? extends T>)visitor).visitUjiOneCopy(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UjiOneCopyContext ujiOneCopy() throws RecognitionException {
		UjiOneCopyContext _localctx = new UjiOneCopyContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_ujiOneCopy);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(152); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(151);
					ujiPrimary();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(154); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UjiLiteralContext extends ParserRuleContext {
		public TerminalNode FMT_STRING() { return getToken(ujiFileParser.FMT_STRING, 0); }
		public TerminalNode RAW_STRING() { return getToken(ujiFileParser.RAW_STRING, 0); }
		public TerminalNode FLOAT() { return getToken(ujiFileParser.FLOAT, 0); }
		public TerminalNode INT() { return getToken(ujiFileParser.INT, 0); }
		public UjiLiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ujiLiteral; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ujiFileVisitor ) return ((ujiFileVisitor<? extends T>)visitor).visitUjiLiteral(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UjiLiteralContext ujiLiteral() throws RecognitionException {
		UjiLiteralContext _localctx = new UjiLiteralContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_ujiLiteral);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 7680L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
